<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16sp"
    android:paddingVertical="16sp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_logout"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_handling"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/txt_email"
        app:layout_constraintStart_toStartOf="@+id/txt_hint_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_hint_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/txt_password"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_login"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_hint_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_hint_email"
        app:layout_constraintStart_toStartOf="@+id/txt_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_hint_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_hint_password"
        app:layout_constraintStart_toStartOf="@+id/txt_hint_email"
        app:layout_constraintTop_toBottomOf="@+id/txt_hint_email" />

</androidx.constraintlayout.widget.ConstraintLayout>